# LatentSpatialMemory

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  accelerate_default.yaml  environment.yml  index.html  pyproject.toml  script.js  styles.css
data_process/: README.md  _0_0_0_root_assign.py  __init__.py  backfill_explicit_scene_proj.py  build_lmdb.sh  cache_lmdb_keys.py  check_corrupted_videos.py  clip_sampling.py  data_config.py  dataset_writer.py  distributed.py  geometry.py  io_utils.py  map_anything.py  naming.py  pack_to_lmdb.py  point_cloud.py  projection.py  qwen3vl_prompts.py  qwen_utils.py  reference_frames.py  resize_existing_videos.py  resize_videos.py  run_pipeline.py  run_spatia_pipeline.py  run_video_captioning.py  run_video_collect.py  run_video_vae_encode.py  sam3_segmenter.py  sample_builder.py  sample_indices.py  types.py  video_io.py  viz.py
eval/: examples.csv  run_spatia_worldscore.py  run_worldscore.py
misc/WorldScore/: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  download.py  pylintrc  ruff.toml  setup.py
misc/WorldScore/notebooks/: visualize_generated_videos.ipynb
misc/WorldScore/requirements/: allegro.txt  cogvideo.txt  crafter.txt  easyanimate.txt  t2vturbo.txt  vchitect.txt
misc/WorldScore/world_generators/: README.md  allegro_ti2v.py  cogvideox.py  dynamicrafter.py  gen3.py  (+10 more)
misc/map-anything/: pyproject.toml
misc/sam3/: pyproject.toml
scripts/: extract_first_frames.py  infer.py  pack_tar.py  train.py
src/latent_mem/: __init__.py  dataset.py  latent_point_cloud.py
src/mirage/: __init__.py  dataset.py  latent_point_cloud.py
(+237 files in other folders)
