[project]
name = "latent-mem"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "av>=16.1.0",
    "diffusers[torch]>=0.36.0",
    "easydict>=1.13",
    "einops>=0.8.2",
    "flash-attn>=2.8.3",
    "ftfy>=6.3.1",
    "hf-transfer>=0.1.9",
    "httpx[socks]>=0.28.1",
    "hydra-core>=1.3.2",
    "imageio[ffmpeg]>=2.37.2",
    "jaxtyping>=0.3.7",
    "jupyterlab>=4.5.4",
    "litellm>=1.83.0",
    "lmdb>=1.7.5",
    "mapanything",
    "modelscope>=1.35.1",
    "OpenEXR",
    "opencv-python>=4.13.0.90",
    "peft>=0.18.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "sam3",
    "seaborn>=0.13.2",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "transformers>=4.57.6",
    "wandb[media]>=0.25.1",
    "open3d>=0.19.0",
    "torchmetrics[image]>=1.8.2",
]

[project.scripts]
latent-mem = "latent_mem:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.9cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }
sam3 = { workspace = true, editable = true }
mapanything = { workspace = true, editable = true }

[tool.uv.workspace]
members = [
    "misc/sam3",
    "misc/map-anything",
]
